# MappingNetwork

./: .gitignore  AGENTS.md  README.md  mapping_networks_full.txt  pyproject.toml
checkpoints/: smoke_lwt_results.json  smoke_slvt_results.json
configs/: cnn1_3conv_baseline.yaml  cnn1_3conv_lwt.yaml  cnn1_3conv_slvt.yaml  cnn1_baseline.yaml  cnn1_lwt.yaml  cnn1_slvt.yaml  cnn2_baseline.yaml  cnn2_lwt.yaml  cnn2_slvt.yaml
docs/: code_review_fix_report.md  experiment_results_report.md  experiment_summary_v1.md  experiment_summary_v2.md
examples/: data.py  evaluate.py  generators.py  train.py  train_baseline.py
examples/models/: cnn1.py  cnn1_3conv.py  cnn2.py
mapping/: __init__.py  base.py  layers.py  loss.py  resblock.py  sequential.py
mapping/generator/: __init__.py  block.py  conv.py  linear.py  lrd.py  mlp.py  resblock.py  transformer.py
mapping/trainer/: __init__.py  base.py  lwt.py  optim_utils.py  slvt.py
mapping_network/: __init__.py  data.py  factory.py
mapping_network/generators/: __init__.py  base.py  cnn.py  linear.py  (+1 more)
tests/: conftest.py  test_checkpoint.py  test_configs.py  test_extensibility.py  test_factory.py  test_generator.py  test_generator_block.py  test_generator_blocks.py  test_generator_mlp.py  test_generator_resblock.py  test_generator_transformer.py  test_generators.py  test_integration.py  test_integration_phase3.py  test_layers.py  test_layers_ext.py  test_loss.py  test_lrd_config.py  test_lwt.py  test_mapping_loss.py  test_mapping_net.py  test_resblock.py  test_sequential.py  test_slvt.py  test_target_nets.py  test_trainer.py
(+32 files in other folders)
